# Material-Viewer

./: .gitignore  imgui.ini  readme.md
build-linux/WSL-GCC-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-linux/WSL-GCC-Debug/.cmake/api/v1/reply/: cache-v2-44c87c50ca8b5126e3c9.json  cmakeFiles-v1-30e4ee7320f2d6c56d78.json  codemodel-v2-e0c46c229e2673eaa652.json  index-2020-08-08T05-46-39-0647.json  target-opengl-Debug-781b8cbf86a456a7c0b1.json
resources/objects/Bedroom_Scene_.OBJ/: bedroom.mtl
resources/objects/Tile1/: Tile1.mtl
resources/objects/building/: residental_building.mtl
resources/objects/cube/: cube.fbx
resources/objects/dysonsphere/source/: SphereFixed_Low.fbx
resources/objects/room textures/floor/: Thumbs.db
resources/objects/room textures/wall/: Thumbs.db
shader/: fbo.frag  light.vert  phong.header.frag  shader.frag  shader.vert  skybox.vert
shader/lightModel/: bling-phong.frag  material.frag  phong.header.frag
shader/lightModel/pbr/: IBL_diffuse.frag  light_header.frag  material_header.frag
shader/math/noise/: noise.frag
shader/postprocess/: fbo.frag
shader/tool/: debug.frag  debug.geom  debug.vert  light.frag  light.vert
source/: CMakeLists.txt  CMakeSettings.json  camera.h  cubemap.cpp  cubemap.h  fbo.cpp  fbo.h  input.h  light.h  load_texture.cpp  mesh.cpp  mesh.h  model.cpp  model.h  opengl.cpp  scene.cpp  scene.h  shader class usage.md  shader.cpp  shader.h  shaderTextProcess.cpp  shaderTextProcess.h  uniform.cpp  uniform.h
source/build-linux/WSL-GCC-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
source/build-linux/WSL-GCC-Debug/.cmake/api/v1/reply/: cache-v2-8d511b016da7860fdf49.json  cmakeFiles-v1-c1d4d22cbf23d1f23336.json  codemodel-v2-4c88c5c77ac2af002c95.json  index-2020-08-08T05-46-03-0205.json
source/imgui/: imgui.ini
source/io/: load_texture.cpp  load_texture.h  textureIO.cpp  textureIO.h
source/mgl/: fbo.cpp  fbo.h  glad.c  shader class usage.md  shader.cpp  shader.h  shaderTextProcess.h  uniform.cpp  uniform.h
source/scene/: ball.cpp  ball.h  camera.h  console.h  cube.cpp  cube.h  cubemap.h  input.h  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  texture.h
source/tool/: debug.cpp  debug.h  path.h
